kubernetes/apps/fingo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fingo
  namespace: apps
spec:
  selector:
    app: fingo
  ports:
    - port: 80
      targetPort: 8080
