kubernetes/apps/fingo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fingo
  namespace: apps
  annotations: 
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  parentRefs:
    - name: main
      namespace: networking
      sectionName: https-fingo
  hostnames:
    - fingo.ink
  rules:
    - backendRefs:
        - name: fingo
          port: 80
