kubernetes/apps/fingo/ingress_deprecated.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fingo
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - fingo.ink
      secretName: fingo-tls
  rules:
    - host: fingo.ink
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fingo
                port:
                  number: 80
